# web_search_mcp

./: .cursorrules  .gitignore  .pre-commit-config.yaml  =6.0.0  LICENSE  Makefile  README.md  cursor-mcp-config.json  env.example  example-mcp-config.json  init_project.py  mcp.json  pyproject.toml  pytest.ini  requirements.txt  rules  setup_mcp_client.py
config/: config.yaml
src/mcp_scaffolding/: server.py
src/mcp_scaffolding/handlers/: __init__.py
src/mcp_scaffolding/models/: example_models.py
src/mcp_scaffolding/utils/: auth.py
src/web_search_mcp/: __init__.py  server.py
src/web_search_mcp/auth/: __init__.py  auth_middleware.py  oauth_flow.py  oauth_provider.py
src/web_search_mcp/extraction/: __init__.py  content_extractor.py  document_processor.py  metadata_extractor.py
src/web_search_mcp/handlers/: __init__.py  enhanced_search_handlers.py  example_handlers.py  search_handlers.py
src/web_search_mcp/models/: __init__.py  search_models.py
src/web_search_mcp/prompts/: __init__.py  search_prompts.py
src/web_search_mcp/resources/: __init__.py  search_resources.py
src/web_search_mcp/search/: __init__.py  duckduckgo.py
src/web_search_mcp/session/: __init__.py  connection_handler.py  session_manager.py
src/web_search_mcp/transports/: __init__.py  http_transport.py  sse_transport.py  transport_manager.py
src/web_search_mcp/utils/: __init__.py  auth.py  config.py  content_cleaner.py  content_extractor.py  error_handling.py  link_extractor.py  logging_config.py  search_cache.py  validation.py
tasks/: prd-enhanced-web-search-mcp.md  prd-web-search-mcp.md  tasks-prd-enhanced-web-search-mcp.md  tasks-prd-web-search-mcp.md
tests/unit/: test_config.py  test_config_files.py  test_content_cleaner.py  test_content_extraction.py  test_content_extractor.py  test_dependencies.py  test_document_processor.py  test_duckduckgo.py  test_duckduckgo_mcp_integration.py  test_enhanced_search_handlers.py  test_error_handling.py  test_example_handlers.py  test_input_validation.py  test_link_extractor.py  test_logging_infrastructure.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_server.py  test_metadata_extractor.py  test_models.py  test_oauth_auth.py  test_package_rename.py  test_requirements.py  test_search_cache.py  test_search_handlers.py  test_search_models.py  test_session_management.py  test_transports.py
